tests/compile_fail/state/invalid_superstate.stderr
error: superstate `Tob` doesn't match any other known `moku::State` or `moku::TopState`
  --> tests/compile_fail/state/invalid_superstate.rs:15:5
   |
15 |     #[superstate(Tob)]
   |     ^
